etl-destinations/tests/snapshots/deltalake_pipeline__append_only_ignores_updates_and_deletes.snap
---
source: etl-destinations/tests/deltalake_pipeline.rs
expression: users_table
---
# Schema
- id: Primitive(Long) nullable=false
- name: Primitive(String) nullable=false
- age: Primitive(Integer) nullable=false

# Data
+----+-------------+-----+
| id | name        | age |
+----+-------------+-----+
| 1  | append_user | 10  |
+----+-------------+-----+
