etl-destinations/tests/snapshots/deltalake_pipeline__merge_with_delete_validation.snap
---
source: etl-destinations/tests/deltalake_pipeline.rs
expression: users_table
---
# Schema
- id: Primitive(Long) nullable=false
- name: Primitive(String) nullable=false
- age: Primitive(Integer) nullable=false

# Data
+----+----------+-----+
| id | name     | age |
+----+----------+-----+
| 1  | d_user_a | 11  |
| 2  | d_user_b | 12  |
+----+----------+-----+
