etl-destinations/tests/snapshots/deltalake_pipeline__table_copy_and_streaming_with_restart_orders_table_1.snap
---
source: etl-destinations/tests/deltalake_pipeline.rs
expression: orders_table
---
# Schema
- id: Primitive(Long) nullable=false
- description: Primitive(String) nullable=false

# Data
+----+---------------+
| id | description   |
+----+---------------+
| 1  | description_1 |
| 2  | description_2 |
+----+---------------+
