etl-destinations/tests/snapshots/deltalake_pipeline__table_insert_update_delete_3_delete.snap
---
source: etl-destinations/tests/deltalake_pipeline.rs
expression: users_table
---
# Schema
- id: Primitive(Long) nullable=false
- name: Primitive(String) nullable=false
- age: Primitive(Integer) nullable=false

# Data
+----+---------+-----+
| id | name    | age |
+----+---------+-----+
| 1  | user_10 | 10  |
+----+---------+-----+
